tests/snapshots/opendbc/generator/honda/honda_bosch_radarless.snap
---
source: tests/snapshots.rs
---
version: ""
bit_timing: ~
messages:
  - id:
      Standard: 456
    name: ACC_CONTROL
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: ACCEL_COMMAND
        multiplexer_indicator: Plain
        start_bit: 7
        size: 12
        byte_order: BigEndian
        value_type: Signed
        factor: 0.01
        offset: 0
        min: 0
        max: 0
        unit: m/s^2
        receivers:
          - XXX
      - name: IDLESTOP_ALLOW
        multiplexer_indicator: Plain
        start_bit: 8
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: STANDSTILL
        multiplexer_indicator: Plain
        start_bit: 9
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: CONTROL_ON
        multiplexer_indicator: Plain
        start_bit: 10
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: BOH
        multiplexer_indicator: Plain
        start_bit: 23
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: AEB_STATUS
        multiplexer_indicator: Plain
        start_bit: 33
        size: 1
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 7
        unit: ""
        receivers:
          - XXX
      - name: AEB_BRAKING
        multiplexer_indicator: Plain
        start_bit: 47
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: AEB_PREPARE
        multiplexer_indicator: Plain
        start_bit: 43
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: FCW_1
        multiplexer_indicator: Plain
        start_bit: 24
        size: 1
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
      - name: FCW_2
        multiplexer_indicator: Plain
        start_bit: 54
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 59
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 61
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 467
    name: CRUISE_FAULT_STATUS
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: CRUISE_FAULT
        multiplexer_indicator: Plain
        start_bit: 3
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 59
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 61
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 477
    name: GEARBOX_ALT_2
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: GEAR_MT
        multiplexer_indicator: Plain
        start_bit: 39
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 59
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 61
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 495
    name: SPEED_LIMIT_DASH_DISPLAY
    size: 8
    transmitter:
      NodeName: ADAS
    signals:
      - name: SPEED_LIMIT
        multiplexer_indicator: Plain
        start_bit: 47
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: mph
        receivers:
          - XXX
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 59
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 61
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 43604
    name: LKAS_HUD_2
    size: 8
    transmitter:
      NodeName: ADAS
    signals:
      - name: COUNTER_2
        multiplexer_indicator: Plain
        start_bit: 7
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
      - name: SET_ME_X01
        multiplexer_indicator: Plain
        start_bit: 5
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: LKAS_BOH_1
        multiplexer_indicator: Plain
        start_bit: 15
        size: 6
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 63
        unit: ""
        receivers:
          - XXX
      - name: LEFT_LANE
        multiplexer_indicator: Plain
        start_bit: 23
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
      - name: RIGHT_LANE
        multiplexer_indicator: Plain
        start_bit: 21
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
      - name: LKAS_BOH_2
        multiplexer_indicator: Plain
        start_bit: 30
        size: 5
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 31
        unit: ""
        receivers:
          - XXX
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 61
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 59
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
comments:
  - Plain:
      comment: IMPORT _honda_common.dbc
  - Plain:
      comment: IMPORT _bosch_2018.dbc
  - Plain:
      comment: IMPORT _lkas_hud_8byte.dbc
  - Plain:
      comment: IMPORT _bosch_standstill.dbc
  - Plain:
      comment: IMPORT _steering_sensors_a.dbc
  - Plain:
      comment: IMPORT _gearbox_common.dbc
  - Signal:
      message_id:
        Standard: 456
      name: IDLESTOP_ALLOW
      comment: allows car to turn off engine at a standstill
  - Signal:
      message_id:
        Standard: 456
      name: STANDSTILL
      comment: set to 1 when camera requests -4.0 m/s^2
  - Signal:
      message_id:
        Standard: 495
      name: SPEED_LIMIT
      comment: Defaults to 0xFF if no speed limit found
value_descriptions:
  - Signal:
      message_id:
        Standard: 477
      name: GEAR_MT
      value_descriptions:
        - id: 14
          description: reverse
        - id: 6
          description: 6th
        - id: 5
          description: 5th
        - id: 4
          description: 4th
        - id: 3
          description: 3rd
        - id: 2
          description: 2nd
        - id: 1
          description: 1st
        - id: 0
          description: Clutch
