tests/snapshots/opendbc/generator/honda/honda_civic_hatchback_ex_2017_can.snap
---
source: tests/snapshots.rs
---
version: ""
bit_timing: ~
comments:
  - Plain:
      comment: IMPORT _honda_common.dbc
  - Plain:
      comment: IMPORT _bosch_2018.dbc
  - Plain:
      comment: IMPORT _bosch_radar_acc.dbc
  - Plain:
      comment: IMPORT _lkas_hud_5byte.dbc
  - Plain:
      comment: IMPORT _bosch_standstill.dbc
  - Plain:
      comment: IMPORT _steering_sensors_a.dbc
  - Plain:
      comment: IMPORT _gearbox_common.dbc
