tests/snapshots/opendbc/generator/honda/honda_civic_touring_2016_can.snap
---
source: tests/snapshots.rs
---
version: ""
bit_timing: ~
messages:
  - id:
      Standard: 493
    name: HUD_SETTING
    size: 5
    transmitter:
      NodeName: XXX
    signals:
      - name: IMPERIAL_UNIT
        multiplexer_indicator: Plain
        start_bit: 5
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - EON
  - id:
      Standard: 545
    name: ECON_STATUS
    size: 6
    transmitter:
      NodeName: XXX
    signals:
      - name: ECON_ON_2
        multiplexer_indicator: Plain
        start_bit: 37
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - EON
      - name: ECON_ON
        multiplexer_indicator: Plain
        start_bit: 23
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - EON
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 43
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - EON
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 45
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - EON
comments:
  - Plain:
      comment: IMPORT _honda_common.dbc
  - Plain:
      comment: IMPORT _nidec_common.dbc
  - Plain:
      comment: IMPORT _lkas_hud_5byte.dbc
  - Plain:
      comment: IMPORT _nidec_scm_group_b.dbc
  - Plain:
      comment: IMPORT _steering_sensors_a.dbc
  - Plain:
      comment: IMPORT _steering_control_a.dbc
  - Plain:
      comment: IMPORT _gearbox_common.dbc
value_descriptions:
  - Signal:
      message_id:
        Standard: 545
      name: ECON_ON_2
      value_descriptions:
        - id: 0
          description: "off"
        - id: 3
          description: "on"
