tests/snapshots/opendbc/generator/honda/honda_clarity_hybrid_2018_can.snap
---
source: tests/snapshots.rs
---
version: ""
bit_timing: ~
messages:
  - id:
      Standard: 768
    name: VEHICLE_STATE
    size: 8
    transmitter:
      NodeName: ADAS
    signals:
      - name: SET_ME_XF9
        multiplexer_indicator: Plain
        start_bit: 7
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - Vector__XXX
      - name: VEHICLE_SPEED
        multiplexer_indicator: Plain
        start_bit: 15
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: kph
        receivers:
          - Vector__XXX
      - name: SET_ME_X8A
        multiplexer_indicator: Plain
        start_bit: 23
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
      - name: SET_ME_XD0
        multiplexer_indicator: Plain
        start_bit: 31
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
      - name: SALTED_WITH_IDX
        multiplexer_indicator: Plain
        start_bit: 39
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 61
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 59
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 769
    name: VEHICLE_STATE2
    size: 8
    transmitter:
      NodeName: ADAS
    signals:
      - name: SET_ME_X5D
        multiplexer_indicator: Plain
        start_bit: 23
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
      - name: SET_ME_X02
        multiplexer_indicator: Plain
        start_bit: 31
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
      - name: SET_ME_X5F
        multiplexer_indicator: Plain
        start_bit: 39
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 61
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 59
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
comments:
  - Plain:
      comment: IMPORT _honda_common.dbc
  - Plain:
      comment: IMPORT _nidec_common.dbc
  - Plain:
      comment: IMPORT _lkas_hud_5byte.dbc
  - Plain:
      comment: IMPORT _nidec_scm_group_b.dbc
  - Plain:
      comment: IMPORT _steering_sensors_a.dbc
  - Plain:
      comment: IMPORT _steering_control_a.dbc
  - Plain:
      comment: IMPORT _gearbox_common.dbc
