tests/snapshots/opendbc/generator/honda/honda_crv_touring_2016_can.snap
---
source: tests/snapshots.rs
---
version: ""
bit_timing: ~
comments:
  - Plain:
      comment: IMPORT _honda_common.dbc
  - Plain:
      comment: IMPORT _nidec_common.dbc
  - Plain:
      comment: IMPORT _lkas_hud_5byte.dbc
  - Plain:
      comment: IMPORT _nidec_scm_group_a.dbc
  - Plain:
      comment: IMPORT _steering_sensors_b.dbc
  - Plain:
      comment: IMPORT _steering_control_b.dbc
  - Plain:
      comment: IMPORT _gearbox_common.dbc
